# eeg-ts-jepa

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: experiment.py  inspect_data.py  run_dreyer_mi.sh  run_spectral_ablation.sh  smoke_test.py  train_moabb.py  visualize_data.py
src/tseegjepa/: __init__.py  augment.py  collapse.py  config.py  domain.py  jepa.py  jepa_hier.py  masking.py  pooling.py  predictor.py  spectral.py  tokenizer.py
src/tseegjepa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tseegjepa/data/: __init__.py  electrodes.py  moabb_eeg.py  montage.py  schema.py  synthetic.py
src/tseegjepa/encoder/: __init__.py  attention.py  encoder.py
src/tseegjepa/eval/: __init__.py  corruptions.py  loocv.py  mdfb.py
src/tseegjepa/train/: __init__.py  checkpoint.py  engine.py  linear_probe.py  pretrain.py  utils.py
tests/: test_architecture.py  test_checkpoint.py  test_experiment_split.py
