[project]
name = "tseegjepa"
version = "0.1.0"
description = "Multi-scale, hardware-agnostic EEG foundation model trained with a Joint-Embedding Predictive Architecture (JEPA)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
research = ["scipy>=1.10", "scikit-learn>=1.3", "pandas>=2.0"]
moabb = [
    "moabb>=1.0",
    "mne>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]
dev = ["pytest>=8", "ruff>=0.5", "mne>=1.5"]

[project.scripts]
tseegjepa-pretrain = "tseegjepa.train.pretrain:main"
tseegjepa-probe = "tseegjepa.train.linear_probe:main"
tseegjepa-eval = "tseegjepa.eval.loocv:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
